--- a/contact.html
+++ b/contact.html
@@ -226,126 +226,127 @@
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer class="odd">
+    <!-- Footer -->
+    <footer>
 
-            <!-- Footer [links] -->
-            <section id="footer" class="footer">
-                <div class="container">
-                    <div class="row items footer-widget">
-                        <div class="col-12 col-lg-3 p-0">
-                            <div class="row">
-                                <div class="branding col-12 p-3 text-center text-lg-left item">
-                                    <div class="brand">
-                                        <a href="/" class="logo">
-                                            Leverage.                                 
-                                            <!-- 
-                                                Custom Logo
-                                                <img src="assets/images/logo.svg" alt="Leverage">
-                                            -->
+        <!-- Footer [links] -->
+        <section id="footer" class="footer py-5">
+            <div class="container">
+                <div class="row items footer-widget">
+                    <div class="col-12 col-lg-3 p-0">
+                        <div class="row">
+                            <div class="branding col-12 p-3 text-center text-lg-left item">
+                                <div class="brand">
+                                    <a href="/" class="logo">
+                                        <img src="assets/images/Logo footer.png" alt="Leverage">
+
+                                    </a>
+                                </div>
+                                <p></p>
+                                <ul class="navbar-nav social share-list mt-0 ml-auto">
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link"><i class="icon-social-instagram ml-0 mr-2"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link"><i class="icon-social-facebook mr-2"></i></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link"><i class="icon-social-linkedin mr-2"></i></a>
+                                    </li>
+
+                                </ul>
+                                <a href="#contact"
+                                            class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                                class="icon-speech"></i>SEND A MESSAGE</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-12 col-lg-9 p-0">
+                        <div class="row">
+
+                            <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
+                                <h4 class="title text-primary-red">Our Services</h4>
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a href="about.html" class="nav-link">About us</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="services.html" class="nav-link">Services</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="specialties.html" class="nav-link">Specialties</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="portfolio.html" class="nav-link">Our Work</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="contact.html" class="nav-link">Contact us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
+                                <h4 class="title text-primary-red">Services</h4>
+                                <a href="#" class="badge tag">Research & Planning</a>
+                                <a href="#" class="badge tag">Advertising</a>
+                                <a href="#" class="badge tag">SEO</a>
+                                <a href="#" class="badge tag">Email Marketing</a>
+                                <a href="#" class="badge tag">Online Learning</a>
+                                <a href="#" class="badge tag">Creative Services</a>
+                            </div>
+                            <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
+                                <h4 class="title text-primary-red">Get in Touch</h4>
+                                <ul class="navbar-nav">
+                                    <li class="nav-item"> <b>Bogotá</b>
+                                        <a href="#" class="nav-link">
+                                            <i class="icon-phone mr-2"></i>
+                                            +1 123 98765 4321
                                         </a>
-                                    </div>
-                                    <p>Authentic and innovative.<br>Built to the smallest detail<br>with a focus on usability<br>and performance.</p>
-                                    <ul class="navbar-nav social share-list mt-0 ml-auto">
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link"><i class="icon-social-instagram ml-0"></i></a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link"><i class="icon-social-facebook"></i></a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link"><i class="icon-social-linkedin"></i></a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link"><i class="icon-social-twitter"></i></a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-lg-9 p-0">                            
-                            <div class="row">
-                                <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                    <h4 class="title">Get in Touch</h4>
-                                    <ul class="navbar-nav">
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                <i class="icon-phone mr-2"></i>
-                                                +1 123 98765 4321
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                <i class="icon-envelope mr-2"></i>
-                                                hello@business.com
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                <i class="icon-location-pin mr-2"></i>
-                                                Office Street, 123
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#contact" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i class="icon-speech"></i>SEND A MESSAGE</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                    <h4 class="title">Our Services</h4>
-                                    <ul class="navbar-nav">
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">Website Development</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">Building Applications</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">SEO & Digital Marketing</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">Branding and Identity</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="#" class="nav-link">Digital Images & Videos</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                    <h4 class="title">Popular Tags</h4>
-                                    <a href="#" class="badge tag">Mobile</a>
-                                    <a href="#" class="badge tag">Development</a>
-                                    <a href="#" class="badge tag">Technology</a>
-                                    <a href="#" class="badge tag">App</a>
-                                    <a href="#" class="badge tag">Education</a>
-                                    <a href="#" class="badge tag">Business</a>
-                                    <a href="#" class="badge tag">Health</a>
-                                    <a href="#" class="badge tag">Industry</a>
-                                </div>
+                                    </li>
+                                    <li class="nav-item"> <b>Barcelona</b>
+                                        <a href="#" class="nav-link">
+                                            <i class="icon-phone mr-2"></i>
+                                            +1 123 98765 4321
+                                        </a>
+                                    </li>
+                                    <li class="nav-item"> <b>Miami</b>
+                                        <a href="#" class="nav-link">
+                                            <i class="icon-phone mr-2"></i>
+                                            +1 123 98765 4321
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">
+                                            <i class="icon-envelope mr-2"></i>
+                                            info@bunji.io
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <!-- Copyright -->
-            <section id="copyright" class="p-3 copyright">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                            <p>Enjoy the low price. We are tracking any intention of piracy.</p>
-                            <!--
-                                Suggestion: Replace the text above with a description of your website.
-                             -->
-                        </div>
-                        <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                            <p>© 2021 Leverage is Proudly Powered by <a href="https://codings.dev" target="_blank">Codings</a>.</p>
-                        </div>
+        <!-- Copyright -->
+        <section id="copyright" class="p-3 copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 p-3 text-center text-lg-left">
+                        <p>Privacy Policy  |  Site Usage   |   T&C   |   Accessibility Statement</p>
+                    </div>
+                    <div class="col-12 col-md-6 p-3 text-center text-lg-right">
+                        <p>© 2022 Proudly Powered by BUNJI</p>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-        </footer>
+    </footer>
 
         <!-- #region Global ============================ -->
 
