--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
 
 
     <!-- Footer -->
-    <footer class="odd">
+    <footer>
 
         <!-- Footer [links] -->
         <section id="footer" class="footer py-5">
@@ -739,27 +739,27 @@
                         <div class="row">
 
                             <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                <h4 class="title text-danger">Our Services</h4>
+                                <h4 class="title text-primary-red">Our Services</h4>
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">About us</a>
+                                        <a href="about.html" class="nav-link">About us</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Services</a>
+                                        <a href="services.html" class="nav-link">Services</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Specialties</a>
+                                        <a href="specialties.html" class="nav-link">Specialties</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Our Work</a>
+                                        <a href="portfolio.html" class="nav-link">Our Work</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Contact us</a>
+                                        <a href="contact.html" class="nav-link">Contact us</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                <h4 class="title text-danger">Services</h4>
+                                <h4 class="title text-primary-red">Services</h4>
                                 <a href="#" class="badge tag">Research & Planning</a>
                                 <a href="#" class="badge tag">Advertising</a>
                                 <a href="#" class="badge tag">SEO</a>
@@ -768,7 +768,7 @@
                                 <a href="#" class="badge tag">Creative Services</a>
                             </div>
                             <div class="col-12 col-lg-4 p-3 text-center text-lg-left item">
-                                <h4 class="title text-danger">Get in Touch</h4>
+                                <h4 class="title text-primary-red">Get in Touch</h4>
                                 <ul class="navbar-nav">
                                     <li class="nav-item"> <b>Bogotá</b>
                                         <a href="#" class="nav-link">
