--- a/index.html
+++ b/index.html
@@ -13,11 +13,25 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Leverage - Your next level of website building</title>
+    <!-- Primary Meta Tags -->
+    <title>Bunji | Digital Growth Marketing Agency</title>
+    <meta name="title" content="Bunji | Digital Growth Marketing Agency">
+    <meta name="description"
+        content="Bunji pairs rich digital marketing expertise with a full range of services that allow you to kickstart business innovation. Jump into growth!">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bunji.io/home">
+    <meta property="og:title" content="Bunji | Digital Growth Marketing Agency">
+    <meta property="og:description"
+        content="Bunji pairs rich digital marketing expertise with a full range of services that allow you to kickstart business innovation. Jump into growth!">
+    <meta property="og:image" content=""><!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bunji.io/home">
+    <meta property="twitter:title" content="Bunji | Digital Growth Marketing Agency">
+    <meta property="twitter:description"
+        content="Bunji pairs rich digital marketing expertise with a full range of services that allow you to kickstart business innovation. Jump into growth!">
+    <meta property="twitter:image" content="">
 
-    <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="subject" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="author" content="Codings">
 
     <!-- ==============================================
         Favicons
@@ -241,7 +255,8 @@
                             <div class="container-about">
                                 <div class="row">
                                     <div class="col-12 col-md-6" style="padding-left: 0;">
-                                        <img src="assets/images/home_slide_2n.png" class="fit-image" alt="Institutional">
+                                        <img src="assets/images/home_slide_2n.png" class="fit-image"
+                                            alt="Institutional">
                                     </div>
                                     <div class="col-12 col-md-5 pl-md-5 align-self-center text-center text-md-left">
                                         <div class="row intro">
@@ -430,8 +445,8 @@
                                 <div class="grid-item wow animate__fadeInUp advertising design">
                                     <a href="portfolio-alcala">
                                         <figure>
-                                            <div class="portfolio-img"><img
-                                                    src="/assets/images/BLOCK_9.jpg" alt="" /></div>
+                                            <div class="portfolio-img"><img src="/assets/images/BLOCK_9.jpg" alt="" />
+                                            </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
                                                     <div class="portfolio-hover-box align-middle text-uppercase">
@@ -449,8 +464,7 @@
                                     data-wow-delay="0.2s">
                                     <a href="portfolio-CMVC">
                                         <figure>
-                                            <div class="portfolio-img"><img
-                                                    src="/assets/images/BLOCK_10.jpg" alt="" />
+                                            <div class="portfolio-img"><img src="/assets/images/BLOCK_10.jpg" alt="" />
                                             </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
@@ -472,8 +486,7 @@
                             <div class="grid-item grid-item-double branding web wow animate__fadeInUp  d-sm-block">
                                 <a href="portfolio-academy">
                                     <figure>
-                                        <div class="portfolio-img"><img
-                                                src="/assets/images/BLOCK_8.jpg" alt="" /></div>
+                                        <div class="portfolio-img"><img src="/assets/images/BLOCK_8.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -497,8 +510,7 @@
                                 data-wow-delay="0.4s">
                                 <a href="portfolio-kanecode">
                                     <figure>
-                                        <div class="portfolio-img"><img
-                                                src="/assets/images/BLOCK_7.jpg" alt="" /></div>
+                                        <div class="portfolio-img"><img src="/assets/images/BLOCK_7.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -630,7 +642,10 @@
                                 <div class="col-12">
                                     <img src="assets/images/team-1.jpg" alt="Adams Baker" class="person">
                                     <h4>RAUL MARTÍN</h4>
-                                    <p class="p-about text-center">With Bunji, I've been able to generate between 2.000 - 2.500 leads that are truly interested in the service I offer. They also have helped to generate 250 potential customers for our Kanecode Academy and sales for B2B and B2C industries.</p>
+                                    <p class="p-about text-center">With Bunji, I've been able to generate between 2.000
+                                        - 2.500 leads that are truly interested in the service I offer. They also have
+                                        helped to generate 250 potential customers for our Kanecode Academy and sales
+                                        for B2B and B2C industries.</p>
                                 </div>
                             </div>
                         </div>
@@ -639,7 +654,9 @@
                                 <div class="col-12">
                                     <img src="assets/images/team-2.jpg" alt="Mary Evans" class="person">
                                     <h4>PAUL JAURE</h4>
-                                    <p class="p-about text-center">“bunji me ayudo a construir el proyecto de vida que hoy es mi modelo de negocio y ayuda a a miles de latinos en Estados unidos con conocimientos sobre el Marketing Digital y el Network Marketing”</p>
+                                    <p class="p-about text-center">“bunji me ayudo a construir el proyecto de vida que
+                                        hoy es mi modelo de negocio y ayuda a a miles de latinos en Estados unidos con
+                                        conocimientos sobre el Marketing Digital y el Network Marketing”</p>
 
                                 </div>
                             </div>
@@ -649,7 +666,12 @@
                                 <div class="col-12">
                                     <img src="assets/images/team-3.jpg" alt="Sarah Lopez" class="person">
                                     <h4>CLAUDIA SANDOVAL</h4>
-                                    <p class="p-about text-center">Collaborating with Bunji for the positioning, deployment, and growth of Formación Alcalá in Latin America has undoubtedly been a high impact strategic decision. Their knowledge of digital strategy, efficiency in lead generation, creativity in design, and skills in communications on social media, together with the commitment and permanent availability of the team, can only be described in one way: IMPECCABLE</p>
+                                    <p class="p-about text-center">Collaborating with Bunji for the positioning,
+                                        deployment, and growth of Formación Alcalá in Latin America has undoubtedly been
+                                        a high impact strategic decision. Their knowledge of digital strategy,
+                                        efficiency in lead generation, creativity in design, and skills in
+                                        communications on social media, together with the commitment and permanent
+                                        availability of the team, can only be described in one way: IMPECCABLE</p>
                                 </div>
                             </div>
                         </div>
@@ -728,13 +750,12 @@
                                     </li>
 
                                 </ul>
-                                <a href="#contact"
-                                            class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
-                                                class="icon-speech"></i>SEND A MESSAGE</a>
+                                <a href="#contact" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                        class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-12 col-lg-9 p-0">
                         <div class="row">
 
@@ -795,7 +816,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        
+
                                     </li>
                                 </ul>
                             </div>
@@ -810,7 +831,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Privacy Policy  |  Site Usage   |   T&C   |   Accessibility Statement</p>
+                        <p>Privacy Policy | Site Usage | T&C | Accessibility Statement</p>
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
                         <p>© 2022 Proudly Powered by BUNJI</p>
