--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,25 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Leverage - Your next level of website building</title>
+    <!-- Primary Meta Tags -->
+    <title>Bunji | Health & Education Digital Marketing Agency</title>
+    <meta name="title" content="Bunji | Health & Education Digital Marketing Agency">
+    <meta name="description"
+        content="Our years of experience with health tech and educational organizations in Spain, Latin America, and the US provide us with deeper insights into these markets.">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bunji.io/specialties">
+    <meta property="og:title" content="Bunji | Health & Education Digital Marketing Agency">
+    <meta property="og:description"
+        content="Our years of experience with health tech and educational organizations in Spain, Latin America, and the US provide us with deeper insights into these markets.">
+    <meta property="og:image" content=""><!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bunji.io/specialties">
+    <meta property="twitter:title" content="Bunji | Health & Education Digital Marketing Agency">
+    <meta property="twitter:description"
+        content="Our years of experience with health tech and educational organizations in Spain, Latin America, and the US provide us with deeper insights into these markets.">
+    <meta property="twitter:image" content="">
 
-    <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="subject" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="author" content="Codings">
 
     <!-- ==============================================
         Favicons
@@ -161,9 +175,8 @@
                 <!-- Item 1 -->
                 <div class="swiper-slide slide-center" id="1">
                     <section>
-                        <img data-aos="zoom-out-up" data-aos-delay="400"
-                            src="/assets/images/16.png" class="hero-image-portfolio"
-                            alt="Hero Image">
+                        <img data-aos="zoom-out-up" data-aos-delay="400" src="/assets/images/16.png"
+                            class="hero-image-portfolio" alt="Hero Image">
                         <div class="slide-content row mb-5" data-mask-768="70">
                             <div class="col-12 inner d-flex">
                                 <div class="center align-self-center text-md-left">
@@ -171,13 +184,15 @@
                                         <span class="title-1">Stories</span> <br>
                                         <span class="title-3">of growth.</span>
                                     </h1>
-                                    <p data-aos="zoom-out-up" data-aos-delay="600" class="p-about pb-5 mb-5 col-12 col-md-6 px-0">What do you need in order to take your business to new heights? Let's talk, establish a plan, and start seeing results.</p>
+                                    <p data-aos="zoom-out-up" data-aos-delay="600"
+                                        class="p-about pb-5 mb-5 col-12 col-md-6 px-0">What do you need in order to take
+                                        your business to new heights? Let's talk, establish a plan, and start seeing
+                                        results.</p>
                                 </div>
                             </div>
                         </div>
-                        <img data-aos="zoom-out-up" data-aos-delay="400"
-                            src="/assets/images/15.png" class="hero-image-portfolio-2"
-                            alt="Hero Image">
+                        <img data-aos="zoom-out-up" data-aos-delay="400" src="/assets/images/15.png"
+                            class="hero-image-portfolio-2" alt="Hero Image">
                     </section>
 
                 </div>
@@ -188,7 +203,7 @@
 
 
 
-   
+
     <!-- start portfolio section -->
     <section class="section-7 wow animate__fadeIn pt-6 sm-padding-40px-bottom padding-20px-bottom ">
         <div class="container-fluid">
@@ -204,8 +219,8 @@
                                 <div class="grid-item wow animate__fadeInUp advertising design mr-4">
                                     <a href="portfolio-alcala">
                                         <figure>
-                                            <div class="portfolio-img"><img
-                                                    src="/assets/images/BLOCK_9.jpg" alt="" /></div>
+                                            <div class="portfolio-img"><img src="/assets/images/BLOCK_9.jpg" alt="" />
+                                            </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
                                                     <div class="portfolio-hover-box align-middle text-uppercase">
@@ -223,8 +238,7 @@
                                     data-wow-delay="0.2s">
                                     <a href="portfolio-CMVC">
                                         <figure>
-                                            <div class="portfolio-img"><img
-                                                    src="/assets/images/BLOCK_10.jpg" alt="" />
+                                            <div class="portfolio-img"><img src="/assets/images/BLOCK_10.jpg" alt="" />
                                             </div>
                                             <figcaption class="mb-0">
                                                 <div class="portfolio-hover-main bg-purple-trans">
@@ -246,8 +260,7 @@
                             <div class="grid-item grid-item-double branding web wow animate__fadeInUp  d-sm-block">
                                 <a href="portfolio-academy">
                                     <figure>
-                                        <div class="portfolio-img"><img
-                                                src="/assets/images/BLOCK_8.jpg" alt="" /></div>
+                                        <div class="portfolio-img"><img src="/assets/images/BLOCK_8.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -271,8 +284,7 @@
                                 data-wow-delay="0.4s">
                                 <a href="portfolio-kanecode">
                                     <figure>
-                                        <div class="portfolio-img"><img
-                                                src="/assets/images/BLOCK_7.jpg" alt="" /></div>
+                                        <div class="portfolio-img"><img src="/assets/images/BLOCK_7.jpg" alt="" /></div>
                                         <figcaption class="mb-0">
                                             <div class="portfolio-hover-main bg-purple-trans">
                                                 <div class="portfolio-hover-box align-middle text-uppercase">
@@ -305,7 +317,8 @@
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-portfolio">Jump into growth with us!</h2>
-                <p class="p-portfolio">What do you need in order to take your business to new heights? Let's talk, establish a plan, and start seeing results.</p>
+                <p class="p-portfolio">What do you need in order to take your business to new heights? Let's talk,
+                    establish a plan, and start seeing results.</p>
                 <a href="#contact" data-aos="zoom-out-up" data-aos-delay="200"
                     class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">CONTACT US</a>
             </div>
@@ -497,13 +510,12 @@
                                     </li>
 
                                 </ul>
-                                <a href="#contact"
-                                            class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
-                                                class="icon-speech"></i>SEND A MESSAGE</a>
+                                <a href="#contact" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                        class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-12 col-lg-9 p-0">
                         <div class="row">
 
@@ -564,7 +576,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        
+
                                     </li>
                                 </ul>
                             </div>
@@ -579,7 +591,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Privacy Policy  |  Site Usage   |   T&C   |   Accessibility Statement</p>
+                        <p>Privacy Policy | Site Usage | T&C | Accessibility Statement</p>
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
                         <p>© 2022 Proudly Powered by BUNJI</p>
