--- a/specialties.html
+++ b/specialties.html
@@ -13,11 +13,25 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Leverage - Your next level of website building</title>
+    <!-- Primary Meta Tags -->
+    <title>Bunji | Our Successful Digital Marketing Strategies</title>
+    <meta name="title" content="Bunji | Our Successful Digital Marketing Strategies">
+    <meta name="description"
+        content="Experience success at scale with our strategic digital marketing services. Jump into growth with us!">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bunji.io/portfolio">
+    <meta property="og:title" content="Bunji | Our Successful Digital Marketing Strategies">
+    <meta property="og:description"
+        content="Experience success at scale with our strategic digital marketing services. Jump into growth with us!">
+    <meta property="og:image" content=""><!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bunji.io/portfolio">
+    <meta property="twitter:title" content="Bunji | Our Successful Digital Marketing Strategies">
+    <meta property="twitter:description"
+        content="Experience success at scale with our strategic digital marketing services. Jump into growth with us!">
+    <meta property="twitter:image" content="">
 
-    <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="subject" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="author" content="Codings">
 
     <!-- ==============================================
         Favicons
@@ -205,7 +219,8 @@
                     <br><br> Our digital journey mapping services provide a deeper understanding of your audiences, what
                     they care about, and optimal communication styles. Customized social media, paid advertising, and
                     email campaigns reach qualified individuals across channels - helping clients significantly boost
-                    student awareness and enrollments.</p>
+                    student awareness and enrollments.
+                </p>
             </div>
         </div>
         <div class="col-12 d-flex flex-column flex-md-row flex-column-reverse p-0">
@@ -282,13 +297,12 @@
                                     </li>
 
                                 </ul>
-                                <a href="#contact"
-                                            class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
-                                                class="icon-speech"></i>SEND A MESSAGE</a>
+                                <a href="#contact" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                        class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-12 col-lg-9 p-0">
                         <div class="row">
 
@@ -349,7 +363,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        
+
                                     </li>
                                 </ul>
                             </div>
@@ -364,7 +378,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Privacy Policy  |  Site Usage   |   T&C   |   Accessibility Statement</p>
+                        <p>Privacy Policy | Site Usage | T&C | Accessibility Statement</p>
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
                         <p>© 2022 Proudly Powered by BUNJI</p>
