--- a/services.html
+++ b/services.html
@@ -13,11 +13,24 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Leverage - Your next level of website building</title>
-
-    <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="subject" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-    <meta name="author" content="Codings">
+    <!-- Primary Meta Tags -->
+    <title>Bunji | Full Service Digital Marketing Agency</title>
+    <meta name="title" content="Bunji | Full Service Digital Marketing Agency">
+    <meta name="description"
+        content="Digital marketing expertise, tailored to your individual needs and goals for growth. A full suite of marketing services that meet your expectations. SEO, SEM, Social Media Marketing, Copywriting, Community Management, Web Design & more.">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bunji.io/services">
+    <meta property="og:title" content="Bunji | Full Service Digital Marketing Agency">
+    <meta property="og:description"
+        content="Digital marketing expertise, tailored to your individual needs and goals for growth. A full suite of marketing services that meet your expectations. SEO, SEM, Social Media Marketing, Copywriting, Community Management, Web Design & more.">
+    <meta property="og:image" content=""><!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://bunji.io/services">
+    <meta property="twitter:title" content="Bunji | Full Service Digital Marketing Agency">
+    <meta property="twitter:description"
+        content="Digital marketing expertise, tailored to your individual needs and goals for growth. A full suite of marketing services that meet your expectations. SEO, SEM, Social Media Marketing, Copywriting, Community Management, Web Design & more.">
+    <meta property="twitter:image" content="">
 
     <!-- ==============================================
         Favicons
@@ -162,7 +175,7 @@
                         <img data-aos="zoom-out-up" data-aos-delay="800"
                             src="/assets/images/banner2_princial_servicios.png" class="hero-image-services"
                             alt="Hero Image">
-                            <figure class="h-20"></figure>
+                        <figure class="h-20"></figure>
                         <div class="slide-content row mb-5 pt-md-5" data-mask-768="70">
                             <div class="col-12 inner d-flex">
                                 <div class="col-12 col-md-9 center align-self-center text-md-left w-100">
@@ -171,7 +184,8 @@
                                         <span class="title-7">tailored to your individual needs and</span> <br>
                                         <span class="title-6">goals for growth.</span>
                                     </h1>
-                                    <p data-aos="zoom-out-up" data-aos-delay="600" class="p-about pb-5 pb-md-0 mb-5 px-0 col-12 col-md-6">A full
+                                    <p data-aos="zoom-out-up" data-aos-delay="600"
+                                        class="p-about pb-5 pb-md-0 mb-5 px-0 col-12 col-md-6">A full
                                         suite of marketing services executed with extensive expertise ensures results
                                         that meet ? or exceed ? your expectations. </p>
                                 </div>
@@ -199,7 +213,8 @@
             </div>
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services">Scale With Flexibility</h2>
-                <p class="p-services">Need the experience of a Chief Marketing Officer? That's no problem. Want to design and launch a
+                <p class="p-services">Need the experience of a Chief Marketing Officer? That's no problem. Want to
+                    design and launch a
                     360-degree digital marketing strategy and growth plan? We've got you covered. Choose individual
                     services as needed, from fee-based projects to monthly programs.</p>
                 <a href="#contact" data-aos="zoom-out-up" data-aos-delay="200"
@@ -210,7 +225,8 @@
         <div class="col-12 d-flex flex-column-reverse flex-md-row p-0">
             <div class="col-12 col-md-6 content-services-bot">
                 <h2 class="h2-services">Tech & Tools for Optimal Growth</h2>
-                <p class="p-services">Utilizing an open-source approach, we are well-versed on current marketing platforms and are
+                <p class="p-services">Utilizing an open-source approach, we are well-versed on current marketing
+                    platforms and are
                     consistently identifying and onboarding new technology, allowing us to employ the best tools for
                     your growth strategy. We also take part in SALT Venture Partner's accelerated growth eco-system,
                     which enables us to provide special opportunities to our clients.</p>
@@ -218,7 +234,7 @@
                     class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button">See
                     How</a>
             </div>
-            <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Block_31.jpg"  class="w-100" alt=""></div>
+            <div class="col-12 col-md-6 p-0"> <img src="/assets/images/Block_31.jpg" class="w-100" alt=""></div>
         </div>
     </section>
 
@@ -407,13 +423,12 @@
                                     </li>
 
                                 </ul>
-                                <a href="#contact"
-                                            class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
-                                                class="icon-speech"></i>SEND A MESSAGE</a>
+                                <a href="#contact" class="mt-4 mr-auto ml-auto ml-lg-0 btn dark-button smooth-anchor"><i
+                                        class="icon-speech"></i>SEND A MESSAGE</a>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col-12 col-lg-9 p-0">
                         <div class="row">
 
@@ -474,7 +489,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        
+
                                     </li>
                                 </ul>
                             </div>
@@ -489,7 +504,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Privacy Policy  |  Site Usage   |   T&C   |   Accessibility Statement</p>
+                        <p>Privacy Policy | Site Usage | T&C | Accessibility Statement</p>
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
                         <p>© 2022 Proudly Powered by BUNJI</p>
